--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ultimaten JS</title>
+    <title>Ultimate JS</title>
 </head>
 <body>
     Hola Mundo
-    <script src="03-control-flujo/10-switch.js"></script>
+    <script src="04-ejercicios/10.js"></script>
 </body>
 </html>
