--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     Hola Mundo
-    <script src="05-objetos/16-tameplates.js"></script>
+    <script src="06-ejercicios/07.js"></script>
 </body>
 </html>
